@@ -16,8 +16,8 @@
     <%= f.date_select :sent_date %>
   </div>
   <div class="field">
-    <%= f.label :received_date %><br />
-    <%= f.date_select :received_date %>
+    <%= f.label :response_date %><br />
+    <%= f.date_select :response_date %>
   </div>
   <div class="field">
     <%= f.label :berlin %><br />
