@@ -1,0 +1,42 @@
+<div style="float:right">
+  Per Page
+  <span class="per_page">
+    20
+  </span>
+</div>
+
+<div style="clear:both"></div>
+
+<div class="frame">
+  <table style="width:100%">
+    <tr>
+      <th>Patient</th>
+      <th>Sent date</th>
+      <th>Response date</th>
+      <th>Berlin</th>
+      <th>Ess</th>
+      <th>Status</th>
+      <th>Eligible</th>
+      <th></th>
+      <th></th>
+      <th></th>
+    </tr>
+
+  <% @mailings.each do |mailing| %>
+    <tr>
+      <td><%= link_to mailing.patient.mrn, mailing.patient if mailing.patient %></td>
+      <td><%= mailing.sent_date %></td>
+      <td><%= mailing.response_date %></td>
+      <td><%= mailing.berlin %></td>
+      <td><%= mailing.ess %></td>
+      <td><%= mailing.status %></td>
+      <td><%= mailing.eligible %></td>
+      <td><%= link_to 'Show', mailing %></td>
+      <td><%= link_to 'Edit', edit_mailing_path(mailing) %></td>
+      <td><%= link_to 'Destroy', mailing, confirm: 'Are you sure?', method: :delete %></td>
+    </tr>
+  <% end %>
+  </table>
+</div>
+
+<center><%= paginate @mailings %></center>
