@@ -1,33 +1,18 @@
-<h1>Listing mailings</h1>
+<% @title = "Mailings" %>
+<h1><%= @title %></h1>
 
-<table>
-  <tr>
-    <th>Sent date</th>
-    <th>Received date</th>
-    <th>Berlin</th>
-    <th>Ess</th>
-    <th>Status</th>
-    <th>Eligible</th>
-    <th></th>
-    <th></th>
-    <th></th>
-  </tr>
+<%= link_to image_tag('contour/addfile.png', alt: '') + "Create New Patient", new_mailing_path, class: 'button positive' %>
 
-<% @mailings.each do |mailing| %>
-  <tr>
-    <td><%= mailing.sent_date %></td>
-    <td><%= mailing.received_date %></td>
-    <td><%= mailing.berlin %></td>
-    <td><%= mailing.ess %></td>
-    <td><%= mailing.status %></td>
-    <td><%= mailing.eligible %></td>
-    <td><%= link_to 'Show', mailing %></td>
-    <td><%= link_to 'Edit', edit_mailing_path(mailing) %></td>
-    <td><%= link_to 'Destroy', mailing, confirm: 'Are you sure?', method: :delete %></td>
-  </tr>
+<div style="clear:both"></div>
+
+<%= form_tag mailings_path, method: :get, remote: true, id: "mailings_search", style: "margin-bottom:-5px" do %>
+  Search <%= text_field_tag 'mrn', params[:mrn] %> <%#= information %>
 <% end %>
-</table>
 
-<br />
+<div id="mailings"><div style="clear:both"></div><br /><center><%= image_tag "ajax-loader.gif" %></center></div>
 
-<%= link_to 'New Mailing', new_mailing_path %>
+<%= javascript_tag do %>
+  $(function(){
+    $.get($("#mailings_search").attr("action"), $("#mailings_search").serialize(), null, "script");
+  });
+<% end %>
