@@ -1,0 +1,1 @@
+$("#mailings").html("<%= escape_javascript(render("mailings")) %>");
