@@ -11,30 +11,59 @@
     </div>
   <% end %>
 
-  <div class="field">
-    <%= f.label :mrn %><br />
-    <%= f.text_field :mrn %>
-  </div>
-  <div class="field">
-    <%= f.label :first_name %><br />
-    <%= f.text_field :first_name %>
-  </div>
-  <div class="field">
-    <%= f.label :last_name %><br />
-    <%= f.text_field :last_name %>
-  </div>
-  <div class="field">
-    <%= f.label :phone_home %><br />
-    <%= f.text_field :phone_home %>
-  </div>
-  <div class="field">
-    <%= f.label :sex %><br />
-    <%= f.text_field :sex %>
-  </div>
-  <div class="field">
-    <%= f.label :age %><br />
-    <%= f.number_field :age %>
-  </div>
+  <fieldset>
+    <legend><%= @title %></legend>
+    <div class="field">
+      <%= f.label :mrn %><br />
+      <%= f.text_field :mrn %>
+    </div>
+    <div class="field">
+      <%= f.label :first_name %><br />
+      <%= f.text_field :first_name %>
+    </div>
+    <div class="field">
+      <%= f.label :last_name %><br />
+      <%= f.text_field :last_name %>
+    </div>
+    <div class="field">
+      <%= f.label :phone_home %><br />
+      <%= f.text_field :phone_home %>
+    </div>
+    <div class="field">
+      <%= f.label :phone_day %><br />
+      <%= f.text_field :phone_day %>
+    </div>
+    <div class="field">
+      <%= f.label :phone_alt %><br />
+      <%= f.text_field :phone_alt %>
+    </div>
+    <div class="field">
+      <%= f.label :sex %><br />
+      <%= f.text_field :sex %>
+    </div>
+    <div class="field">
+      <%= f.label :age %><br />
+      <%= f.number_field :age %>
+    </div>
+    <div class="field">
+      <%= f.label :address1 %><br />
+      <%= f.text_field :address1 %>
+    </div>
+
+    <div class="field">
+      <%= f.label :city %><br />
+      <%= f.text_field :city %>
+    </div>
+    <div class="field">
+      <%= f.label :state %><br />
+      <%= f.text_field :state %>
+    </div>
+    <div class="field">
+      <%= f.label :zip %><br />
+      <%= f.text_field :zip %>
+    </div>
+  </fieldset>
+
   <div class="actions">
     <%= f.submit %>
   </div>
