@@ -7,29 +7,23 @@
 
 <div style="clear:both"></div>
 
+<% items = ['mrn', 'first_name', 'last_name', 'phone_home', 'phone_day', 'phone_alt', 'sex', 'age'] %>
+
 <div class="frame">
   <table style="width:100%;table-layout:fixed">
     <tr>
-      <th>MRN</th>
-      <th>First name</th>
-      <th>Last name</th>
-      <th>Home Phone</th>
-      <th>Address 1</th>
-      <th>Sex</th>
-      <th>Age</th>
-      <th></th>
-      <th></th>
-      <th></th>
+      <% items.each do |item| %>
+        <th><%= item.titleize %></th>
+      <% end %>
+      <th>Latest Event</th>
     </tr>
 
   <% @patients.each do |patient| %>
     <tr onmouseover="$('.patient_<%= patient.id %>_short').hide();$('.patient_<%= patient.id %>').show();" onmouseout="$('.patient_<%= patient.id %>').hide();$('.patient_<%= patient.id %>_short').show();">
-      <% ['mrn', 'first_name', 'last_name', 'phone_home', 'address1', 'sex', 'age'].each do |item| %>
-        <td><span class="patient_<%= patient.id %>_short"><%= patient.send(item).to_s.first %></span><span class="patient_<%= patient.id %>" style="display:none"><%= patient.send(item) %></span></td>
+      <% items.each do |item| %>
+        <td><span class="patient_<%= patient.id %>_short"><%= patient.send(item).to_s.first %></span><span class="patient_<%= patient.id %>" style="display:none"><%= link_to_if item == 'mrn', patient.send(item), patient %></span></td>
       <% end %>
-      <td><%= link_to 'Show', patient %></td>
-      <td><%= link_to 'Edit', edit_patient_path(patient) %></td>
-      <td><%= link_to 'Destroy', patient, confirm: 'Are you sure?', method: :delete %></td>
+      <td style="white-space:nowrap"><%= image_tag "gentleface/16/#{patient.events.first.image}.png", alt: '', style: 'vertical-align:text-bottom' if patient.events.first %> <%= link_to patient.events.first.name, patient.events.first if patient.events.first %></td>
     </tr>
   <% end %>
   </table>
