@@ -1,6 +1,3 @@
-<h1>Editing patient</h1>
+<% @title = "Edit Patient: #{@patient.name}" %>
 
 <%= render 'form' %>
-
-<%= link_to 'Show', @patient %> |
-<%= link_to 'Back', patients_path %>
