@@ -1,5 +1,3 @@
-<h1>New patient</h1>
+<% @title = "New Patient" %>
 
 <%= render 'form' %>
-
-<%= link_to 'Back', patients_path %>
