@@ -1,35 +1,78 @@
-<p id="notice"><%= notice %></p>
+<% if current_user.system_admin? %> <%# current_user.all_patients.include?(@patient) %>
+  <%= link_to image_tag('gentleface/16/doc_edit.png', alt: '') + "Edit Patient", edit_patient_path(@patient), class: 'button' %>
+  <%= link_to image_tag('gentleface/16/doc_delete.png', alt: '') + "Delete Patient", @patient, confirm: "Are you sure you want to delete Patient #{@patient.name}?", method: :delete, class: 'button negative' %>
+<% end %>
+<%= link_to image_tag('contour/mydocuments.png', alt: '') + "View All Patients", patients_path, class: 'button' %>
+<div style="clear:both"></div>
+<%= link_to image_tag('gentleface/16/phone_1.png', alt: '') + 'Create Phone Call Event', '#', class: 'button positive' %>
+<%= link_to image_tag('gentleface/16/mail.png', alt: '') + 'Create Mailing Sent Event', '#', class: 'button positive' %>
+<%= link_to image_tag('gentleface/16/mail_2.png', alt: '') + 'Create Mailing Received', '#', class: 'button positive' %>
 
-<p>
-  <b>Mrn:</b>
-  <%= @patient.mrn %>
-</p>
 
-<p>
-  <b>First name:</b>
-  <%= @patient.first_name %>
-</p>
 
-<p>
-  <b>Last name:</b>
-  <%= @patient.last_name %>
-</p>
+<div style="clear:both"></div>
 
-<p>
-  <b>Home Phone:</b>
-  <%= @patient.phone_home %>
-</p>
+<fieldset>
+  <legend><%= image_tag 'gentleface/16/user.png', alt: '', style: 'vertical-align:text-bottom' %> Patient</legend>
 
-<p>
-  <b>Sex:</b>
-  <%= @patient.sex %>
-</p>
+  <p>
+    <b>Mrn:</b>
+    <%= @patient.mrn %>
+  </p>
 
-<p>
-  <b>Age:</b>
-  <%= @patient.age %>
-</p>
+  <p>
+    <b>First name:</b>
+    <%= @patient.first_name %>
+  </p>
 
+  <p>
+    <b>Last name:</b>
+    <%= @patient.last_name %>
+  </p>
+
+  <p>
+    <b>Home Phone:</b>
+    <%= @patient.phone_home %>
+  </p>
+
+  <p>
+    <b>Day Phone:</b>
+    <%= @patient.phone_day %>
+  </p>
+
+  <p>
+    <b>Alt Phone:</b>
+    <%= @patient.phone_alt %>
+  </p>
+
+  <p>
+    <b>Sex:</b>
+    <%= @patient.sex %>
+  </p>
+
+  <p>
+    <b>Age:</b>
+    <%= @patient.age %>
+  </p>
+
+  <p>
+    <b>Address:</b>
+    <%= @patient.address %>
+  </p>
+
+  <p>
+    <b>ESS:</b>
+    <%= @patient.ess %>
+  </p>
+
+  <p>
+    <b>Berlin:</b>
+    <%= @patient.berlin %>
+  </p>
+
+</fieldset>
+
+<%= @events = @patient.events.order('event_time desc').page(0); render partial: 'events/events' %>
 
 <%= link_to 'Edit', edit_patient_path(@patient) %> |
 <%= link_to 'Back', patients_path %>
