@@ -1,0 +1,6 @@
+class AddPhoneDayToPatients < ActiveRecord::Migration
+  def change
+    add_column :patients, :phone_day, :string
+
+  end
+end
